Add file and images

--- a/index.html
+++ b/index.html
@@ -1,11 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sasto Kinmel</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <!-----------------------------------Start of Header------------------------------------>
+    <header>
+      <div class="navbar">
+        <div class="nav-logo border">
+          <div class="logo"></div>
+        </div>
+        <div class="nav-address border">
+          <p class="deliver">Deliver to</p>
+          <div class="add-icon">
+            <i class="fa-solid fa-location-dot"></i>
+            <p class="add-location">Nepal</p>
+          </div>
+        </div>
+
+        <div class="nav-search">
+          <select class="select-search">
+            <option>All</option>
+          </select>
+          <input placeholder="Search SastoKinmel" class="search-input" />
+          <div class="search-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+        </div>
+
+        <div class="nav-flag border">
+          <img src="./images/nepal-flag.png" width="20px" />
+          <p>नेपाली</p>
+          <i class="fa-solid fa-caret-down"></i>
+        </div>
+
+        <div class="nav-signin border">
+          <p><span>Hi there!, Log In</span></p>
+          <p class="nav-account">Account & Inventory</p>
+        </div>
+        <div class="nav-return border">
+          <p><span>Return</span></p>
+          <p class="nav-account">& Orders</p>
+        </div>
+        <div class="nav-cart border">
+          <i class="fa-solid fa-cart-shopping"></i>
+          Cart
+        </div>
+      </div>
+      <!--------------------------------------End of Header-------------------------------------->
+
+      <!-----------------------------------Start of Panel Section------------------------------------>
+      <div class="panel">
+        <div class="panel-all border">
+          <i class="fa-solid fa-bars"></i>
+          All
+        </div>
+        <div class="panel-options">
+          <p class="border">Today's Deals</p>
+          <p class="border">Customer Servie</p>
+          <p class="border">Registry</p>
+          <p class="border">Gift Cards</p>
+          <p class="border">Sell</p>
+        </div>
+      </div>
+    </header>
+    <!-----------------------------------End of Panel Section------------------------------------>
+
+
+
+    <!-----------------------------------Start of main section------------------------------------>
+
+    <div class="main-section">
+    </div>
+    <!-----------------------------------End of main section------------------------------------>
+
+
+
+    <!-----------------------------------Start of main content------------------------------------>
+
+    <div class="shop-section">
+      <div class="box1 box">
+        <div class="box-content">
+          <h2>Get your game on</h2>
+          <div class="box-img" style="background-image: url('./images/i2.jpg')"></div>
+          <a href="#">Shop gaming</a>
+        </div>
+      </div>
+      <div class="box2 box">
+        <div class="box-content">
+          <h2>Electronics & Gadgets</h2>
+          <div class="box-img" style="background-image: url('./images/i3.jpg')"></div>
+          <a href="#">See more</a>
+        </div>
+      </div>
+      <div class="box3 box">
+        <div class="box-content">
+          <h2>Latest Bicycle</h2>
+          <div class="box-img" style="background-image: url('./images/i4.jpg')"></div>
+          <a href="#">See all</a>
+        </div>
+      </div>
+      <div class="box4 box">
+        <div class="box-content">
+          <h2>Toys under Rs.199</h2>
+          <div class="box-img" style="background-image: url('./images/i5.jpg')"></div>
+          <a href="#">Shop now</a>
+        </div>
+      </div>
+      <div class="box5 box">
+        <div class="box-content">
+          <h2>Washing Machine</h2>
+          <div class="box-img" style="background-image: url('./images/i6.jpg')"></div>
+          <a href="#">View further</a>
+        </div>
+      </div>
+      <div class="box6 box">
+        <div class="box-content">
+          <h2>Most-loved watches</h2>
+          <div class="box-img" style="background-image: url('./images/i7.jpg')"></div>
+          <a href="#">Browse more</a>
+        </div>
+      </div>
+      <div class="box7 box">
+        <div class="box-content">
+          <h2>Top Fashion</h2>
+          <div class="box-img" style="background-image: url('./images/i8.jpg')"></div>
+          <a href="#">Explore more</a>
+        </div>
+      </div>
+      <div class="box8 box">
+        <div class="box-content">
+          <h2>Top Shoes</h2>
+          <div class="box-img" style="background-image: url('./images/i9.jpg')"></div>
+          <a href="#">Check out more</a>
+        </div>
+      </div>
+      <div class="box9 box">
+        <div class="box-content">
+          <h2>New home arrivals under Rs.199</h2>
+          <div class="box-img">
+            <img src="./images/i10.jpg" />
+            <img src="./images/i11.jpg" />
+            <img src="./images/i12.jpg" />
+            <img src="./images/i13.jpg" />
+          </div>
+          <a href="#">Check out more</a>
+        </div>
+      </div>
+      <div class="box10 box">
+        <div class="box-content">
+          <h2>Refresh your space</h2>
+          <div class="box-img">
+            <img src="./images/i14.jpg" />
+            <img src="./images/i15.jpg" />
+            <img src="./images/i16.jpg" />
+            <img src="./images/i17.jpg" />
+          </div>
+          <a href="#">See more</a>
+        </div>
+      </div>
+      <div class="box11 box">
+        <div class="box-content">
+          <h2>Most-loved travel essentials</h2>
+          <div class="box-img">
+            <img src="./images/i18.jpg" />
+            <img src="./images/i19.jpg" />
+            <img src="./images/i20.jpg" />
+            <img src="./images/i21.jpg" />
+          </div>
+          <a href="#">Discover more</a>
+        </div>
+      </div>
+      <div class="box12 box">
+        <div class="box-content">
+          <h2>Level up your gaming</h2>
+          <div class="box-img">
+            <img src="./images/i22.jpg" alt="hello" />
+            <img src="./images/i23.jpg" alt="hello" />
+            <img src="./images/i24.jpg" alt="hello" />
+            <img src="./images/i25.jpg" alt="hello" />
+          </div>
+          <a href="#">Show the lastest in gaming</a>
+        </div>
+      </div>
+    </div>
+    <!-----------------------------------End of main content------------------------------------>
+
+
+    <!-----------------------------------Start of Footer------------------------------------>
+    <footer>
+      <div class="footer-panel1">
+        Back to top
+      </div>
+
+      <div class="footer-panel2">
+        <ul>
+          <p>Find Out More About Us</p>
+          <a>Career</a>
+          <a>Blog</a>
+          <a>About SastoKinmel</a>
+          <a>SastoKinmel Tours</a>
+        </ul>
+        <ul>
+          <p>Make Money with Us</p>
+          <a>Sell on SastoKinmel</a>
+          <a>Advertise Your Products</a>
+          <a>Self-Publish with Us</a>
+          <a>Host an SastoKinmel Hub</a>
+        </ul>
+        <ul>
+          <p>Let Us Help You</p>
+          <a>Your Account</a>
+          <a>Your Orders</a>
+          <a>Shipping Rates & Policies</a>
+          <a>Returns & Replacements</a>
+          <a>Manage Your Content and Devices</a>
+          <a>SastoKinmel Assistant</a>
+          <a>Help</a>
+        </ul>
+
+      </div>
+
+      <div class="footer-panel3">
+        <div class="footer-logo">
+        </div>
+      </div>
+
+      <div class="footer-panel4">
+        <p>SastoKinmel. All Rights Reserved.</p>
+        <div class="footer-terms">
+          <a href="#">Privacy Policy |</a>
+          <a href="#">Terms of Service |</a>
+          <a href="#">Contact Me</a>
+        </div>
+        <div class="social-icons">
+          Follow me on: 
+        <a href="https://github.com/nirajdev147" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/nirajdev2085/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      </div>
+      </div>
+    </footer>
+    <!-----------------------------------End of Footer------------------------------------>
+  </body>
 </html>
